--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap-icons": "^1.5.0",
     "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
     "howler": "^2.2.3",
